--- a/BokInterface/BokInterface.csproj
+++ b/BokInterface/BokInterface.csproj
@@ -10,11 +10,11 @@
         <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.0" PrivateAssets="all" />
         <PackageReference Include="System.Resources.Extensions" Version="4.6.0" />
         <Reference Include="System.Windows.Forms" />
-        <Reference Include="BizHawk.Client.Common" HintPath="$(ProjectDir)../BizHawk/dll/BizHawk.Client.Common.dll" />
-        <Reference Include="BizHawk.Emulation.Common" HintPath="$(ProjectDir)../BizHawk/dll/BizHawk.Emulation.Common.dll" />
-        <Reference Include="BizHawk.Client.EmuHawk" HintPath="$(ProjectDir)../BizHawk/EmuHawk.exe" />
-        <Reference Include="BizHawk.Common" HintPath="$(ProjectDir)../BizHawk/dll/BizHawk.Common.dll" />
-        <Reference Include="BizHawk.WinForms.Controls" HintPath="$(ProjectDir)../BizHawk/dll/BizHawk.WinForms.Controls.dll" />
+        <Reference Include="BizHawk.Client.Common" HintPath="$(ProjectDir)../GBAHawk/dll/BizHawk.Client.Common.dll" />
+        <Reference Include="BizHawk.Emulation.Common" HintPath="$(ProjectDir)../GBAHawk/dll/BizHawk.Emulation.Common.dll" />
+        <Reference Include="BizHawk.Client.EmuHawk" HintPath="$(ProjectDir)../GBAHawk/GBAHawk.exe" />
+        <Reference Include="BizHawk.Common" HintPath="$(ProjectDir)../GBAHawk/dll/BizHawk.Common.dll" />
+        <Reference Include="BizHawk.WinForms.Controls" HintPath="$(ProjectDir)../GBAHawk/dll/BizHawk.WinForms.Controls.dll" />
     </ItemGroup>
     <ItemGroup>
       <Compile Update="BokInterfaceMainForm.cs">
@@ -22,6 +22,6 @@
       </Compile>
     </ItemGroup>
     <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-        <Copy SourceFiles="$(OutputPath)$(MSBuildProjectName).dll" DestinationFolder="$(ProjectDir)../BizHawk/ExternalTools" />
+        <Copy SourceFiles="$(OutputPath)$(MSBuildProjectName).dll" DestinationFolder="$(ProjectDir)../GBAHawk/ExternalTools" />
     </Target>
 </Project>
