--- a/.editorconfig
+++ b/.editorconfig
@@ -13,8 +13,10 @@ dotnet_separate_import_directive_groups = true
 
 dotnet_diagnostic.IDE0001.severity = warning
 dotnet_diagnostic.IDE0002.severity = warning
+dotnet_diagnostic.IDE0003.severity = warning
 dotnet_diagnostic.IDE0005.severity = warning
 dotnet_diagnostic.IDE0008.severity = warning
+dotnet_diagnostic.IDE0009.severity = warning
 dotnet_diagnostic.IDE0049.severity = warning
 dotnet_diagnostic.IDE0051.severity = warning
 dotnet_diagnostic.IDE0052.severity = warning
