--- a/BokInterface/BokInterface.csproj
+++ b/BokInterface/BokInterface.csproj
@@ -1,27 +1,24 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <LangVersion>9.0</LangVersion>
+        <LangVersion>12.0</LangVersion>
         <Nullable>enable</Nullable>
-        <TargetFramework>net4.8</TargetFramework>
+        <TargetFramework>net48</TargetFramework>
         <GenerateResourceUsePreserializedResources>true</GenerateResourceUsePreserializedResources>
     </PropertyGroup>
+    <PropertyGroup Condition=" '$(BIZHAWK_DIR)' == '' ">
+        <BIZHAWK_DIR>$(ProjectDir)../BizHawk</BIZHAWK_DIR>
+    </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-        <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.0" PrivateAssets="all" />
-        <PackageReference Include="System.Resources.Extensions" Version="4.6.0" />
+        <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.3" PrivateAssets="all" />
+        <PackageReference Include="System.Resources.Extensions" Version="4.7.0" />
         <Reference Include="System.Windows.Forms" />
-        <Reference Include="BizHawk.Client.Common" HintPath="$(ProjectDir)../BizHawk/dll/BizHawk.Client.Common.dll" />
-        <Reference Include="BizHawk.Emulation.Common" HintPath="$(ProjectDir)../BizHawk/dll/BizHawk.Emulation.Common.dll" />
-        <Reference Include="BizHawk.Client.EmuHawk" HintPath="$(ProjectDir)../BizHawk/EmuHawk.exe" />
-        <Reference Include="BizHawk.Common" HintPath="$(ProjectDir)../BizHawk/dll/BizHawk.Common.dll" />
-        <Reference Include="BizHawk.WinForms.Controls" HintPath="$(ProjectDir)../BizHawk/dll/BizHawk.WinForms.Controls.dll" />
-    </ItemGroup>
-    <ItemGroup>
-      <Compile Update="BokInterfaceMainForm.cs">
-        <SubType>Form</SubType>
-      </Compile>
+        <Reference Include="BizHawk.Client.Common" HintPath="$(BIZHAWK_DIR)/dll/BizHawk.Client.Common.dll" />
+        <Reference Include="BizHawk.Client.EmuHawk" HintPath="$(BIZHAWK_DIR)/EmuHawk.exe" />
+        <Reference Include="BizHawk.Common" HintPath="$(BIZHAWK_DIR)/dll/BizHawk.Common.dll" />
+        <Reference Include="BizHawk.Emulation.Common" HintPath="$(BIZHAWK_DIR)/dll/BizHawk.Emulation.Common.dll" />
+        <Reference Include="BizHawk.WinForms.Controls" HintPath="$(BIZHAWK_DIR)/dll/BizHawk.WinForms.Controls.dll" />
     </ItemGroup>
     <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-        <Copy SourceFiles="$(OutputPath)$(MSBuildProjectName).dll" DestinationFolder="$(ProjectDir)../BizHawk/ExternalTools" />
+        <Copy SourceFiles="$(OutputPath)$(MSBuildProjectName).dll" DestinationFolder="$(BIZHAWK_DIR)/ExternalTools" />
     </Target>
 </Project>
