--- a/.editorconfig
+++ b/.editorconfig
@@ -22,6 +22,8 @@ dotnet_diagnostic.IDE0003.severity = warning
 dotnet_diagnostic.IDE0005.severity = warning
 dotnet_diagnostic.IDE0008.severity = warning
 dotnet_diagnostic.IDE0009.severity = warning
+dotnet_diagnostic.IDE0028.severity = warning
+dotnet_diagnostic.IDE0044.severity = warning
 dotnet_diagnostic.IDE0049.severity = warning
 dotnet_diagnostic.IDE0051.severity = warning
 dotnet_diagnostic.IDE0052.severity = warning
